infra/k8s-dev/characters-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: characters-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: characters
  template:
    metadata:
      labels:
        app: characters
    spec:
      containers:
        - name: characters
          image: gcr.io/saon-dev/characters
---
apiVersion: v1
kind: Service
metadata:
  name: characters-srv
spec:
  selector:
    app: characters
  ports:
    - name: characters
      protocol: TCP
      port: 3000
      targetPort: 3000
