infra/k8s-dev/gmchanges-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gmchanges-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gmchanges
  template:
    metadata:
      labels:
        app: gmchanges
    spec:
      containers:
        - name: gmchanges
          image: gcr.io/saon-dev/gmchanges
---
apiVersion: v1
kind: Service
metadata:
  name: gmchanges-srv
spec:
  selector:
    app: gmchanges
  ports:
    - name: gmchanges
      protocol: TCP
      port: 3000
      targetPort: 3000
