infra/k8s-dev/wiki-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wiki-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wiki
  template:
    metadata:
      labels:
        app: wiki
    spec:
      containers:
        - name: wiki
          image: gcr.io/saon-dev/wiki
---
apiVersion: v1
kind: Service
metadata:
  name: wiki-srv
spec:
  selector:
    app: wiki
  ports:
    - name: wiki
      protocol: TCP
      port: 3000
      targetPort: 3000
